Bug 84257 - Menus, dialogs and sidebar having the word 'page' rather than 'slide'
Summary: Menus, dialogs and sidebar having the word 'page' rather than 'slide'
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Muhammet Kara
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: SD-Shared-Code Impress-UX
  Show dependency treegraph
 
Reported: 2014-09-23 21:50 UTC by Yousuf Philips (jay) (retired)
Modified: 2019-10-31 00:03 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-09-23 21:50:28 UTC
The stand menu and context menu have entries with the word 'page' in it rather than 'slide'.

Examples:
Format > Page
Context Menu > Slide > Page Setup

And this also effects the Page dialog and the page tab in that dialog.

In the sidebar its written 'Master Pages'.
Comment 1 A (Andy) 2014-10-15 20:38:17 UTC
reproducible with LO 4.3.2.2 (Win 8.1)

All the time we speak of slides and therefore for me this seems to be logical to use only one term uniformly.  
Would there be any objections or comments against this?
Comment 2 Yousuf Philips (jay) (retired) 2014-12-26 12:46:52 UTC
I fixed the context menu entry in bug 84233.
Comment 3 QA Administrators 2016-01-17 20:03:45 UTC
** Please read this message in its entirety before responding **

To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year.

There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present.

If you have time, please do the following:

Test to see if the bug is still present on a currently supported version of LibreOffice (5.0.4 or later)  https://www.libreoffice.org/download/

If the bug is present, please leave a comment that includes the version of LibreOffice and your operating system, and any changes you see in the bug behavior
 
If the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a short comment that includes your version of LibreOffice and Operating System

Please DO NOT:

- Update the version field
- Reply via email (please reply directly on the bug tracker)
- Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not appropriate in this case)

If you want to do more to help you can test to see if your issue is a REGRESSION. To do so: 1. Download and install oldest version of LibreOffice (usually 3.3 unless your bug pertains to a feature added after 3.3)

http://downloadarchive.documentfoundation.org/libreoffice/old/

2. Test your bug 3. Leave a comment with your results. 4a. If the bug was present with 3.3 - set version to "inherited from OOo"; 4b. If the bug was not present in 3.3 - add "regression" to keyword


Feel free to come ask questions or to say hello in our QA chat: http://webchat.freenode.net/?channels=libreoffice-qa

Thank you for your help!

-- The LibreOffice QA Team This NEW Message was generated on: 2016-01-17
Comment 4 QA Administrators 2019-05-14 02:55:06 UTC Comment hidden (obsolete)
Comment 5 Commit Notification 2019-10-31 00:02:37 UTC
Muhammet Kara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/57ba3d1d16df86d2393a8110620738e57265e19c

tdf#84257: Consistent 'slide' naming in Impress UI

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.