tdf#84257: Consistent 'slide' naming in Impress UI

Change-Id: I6af0f6d79e145a4a0497cd72f960ee21d595b311